<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewTop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="match_parent"
                    android:layout_height="275dp"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription"
                    tools:src="@color/black" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

        <ImageView
            android:id="@+id/iv_movie"
            android:layout_width="135dp"
            android:layout_height="220dp"
            android:layout_marginStart="16dp"
            android:elevation="4dp"
            android:src="@drawable/ic_movie_catalogue"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewTop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cardViewTop"
            tools:ignore="ContentDescription" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            app:borderWidth="0dp"
            android:backgroundTint="@color/white1"
            android:contentDescription="@string/add_to_favorite"
            android:src="@drawable/ic_fav_border"
            app:layout_constraintBottom_toBottomOf="@+id/cardViewTop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTop" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:maxLines="4"
            android:text="@string/title"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/fab_favorite"
            app:layout_constraintStart_toEndOf="@id/iv_movie"
            app:layout_constraintTop_toBottomOf="@+id/cardViewTop" />

        <TextView
            android:id="@+id/tv_text_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/release"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_movie"
            app:layout_constraintTop_toBottomOf="@+id/iv_movie" />

        <TextView
            android:id="@+id/tv_text_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/popularity"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_text_release"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_release" />

        <TextView
            android:id="@+id/tv_text_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rating"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv_text_popularity"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_popularity" />

        <TextView
            android:id="@+id/colon1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/colon"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_text_release"
            app:layout_constraintTop_toTopOf="@+id/tv_text_release" />

        <TextView
            android:id="@+id/colon2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/colon"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_text_release"
            app:layout_constraintTop_toTopOf="@+id/tv_text_popularity" />

        <TextView
            android:id="@+id/colon3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/colon"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/tv_text_release"
            app:layout_constraintTop_toTopOf="@+id/tv_text_rating" />


        <TextView
            android:id="@+id/tv_release"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_release"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/colon1"
            app:layout_constraintTop_toTopOf="@+id/colon1" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_popularity"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/colon2"
            app:layout_constraintTop_toTopOf="@+id/colon2" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/dummy_rating"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/colon3"
            app:layout_constraintTop_toTopOf="@+id/colon3" />

        <TextView
            android:id="@+id/tv_text_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/desc"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/iv_movie"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_rating" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/dummy_overview"
            android:textAlignment="gravity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_text_desc" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_desc" />

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>